syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.alexandrevieira.stubs";
option java_outer_classname = "PixKeyManagerGrpc";
option objc_class_prefix = "HLW";

package dev.alexandrevieira;

service KeyManagerRegistraService {
    rpc registra(NovaChavePixRequest) returns (NovaChavePixResponse) {}
}

service KeyManagerRemoveService {
    rpc remove(RemoveChaveRequest) returns (RemoveChaveResponse) {}
}

enum TipoDaChave {
    CHAVE_DESCONHECIDA = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    ALEATORIA = 4;
}

enum TipoDaConta {
    CONTA_DESCONHECIDA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

message NovaChavePixRequest {
    string cliente_id = 1;
    TipoDaChave tipo_chave = 2;
    string valor_chave = 3;
    TipoDaConta tipo_conta = 4;
}

message NovaChavePixResponse {
    string cliente_id = 1;
    string chave_pix_id = 2;
}


message RemoveChaveRequest {
    string cliente_id = 1;
    string chave_pix_id = 2;
}

message RemoveChaveResponse {
    string cliente_id = 1;
    string chave_pix_id = 2;
}